--- a/GoujiRecognition/pyproject.toml
+++ b/GoujiRecognition/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "opencv-python (>=4.11.0.86,<5.0.0.0)",
     "numpy (>=2.2.3,<3.0.0)",
-    "matplotlib (>=3.10.1,<4.0.0)"
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "pyinstaller (>=6.12.0,<7.0.0); python_version < '3.14'"
 ]
 
 
